Sculpt: Grab brush not working as expected when Ctrl is press. #70299

Closed
opened 2019-09-27 16:22:11 +02:00 by Tonatiuh de San Julián · 3 comments

System Information
Operating system: Linux-5.0.0-29-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-26 16:04, hash: c43018cdc0

Short description of error
Grab brush not working as expected with Ctrl press, it doesn't move the topology along the normal, and start flickering.

Exact steps for others to reproduce the error
Subdivide the cube with a subdiv modifier in simple interpolation (or just remesh it to have more topology)
Use the grab brush with ctrl press and move the topology away from the cube.

It works as expected when the option "original normal" is activated under the brush menu, of-course pressing ctrl.

vokoscreen-2019-09-27_16-15-22.mp4

**System Information** Operating system: Linux-5.0.0-29-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-26 16:04, hash: `c43018cdc0` **Short description of error** Grab brush not working as expected with Ctrl press, it doesn't move the topology along the normal, and start flickering. **Exact steps for others to reproduce the error** Subdivide the cube with a subdiv modifier in simple interpolation (or just remesh it to have more topology) Use the grab brush with ctrl press and move the topology away from the cube. It works as expected when the option "original normal" is activated under the brush menu, of-course pressing ctrl. [vokoscreen-2019-09-27_16-15-22.mp4](https://archive.blender.org/developer/F7777055/vokoscreen-2019-09-27_16-15-22.mp4)

Added subscriber: @TonatiuhdeSanJulian

Added subscriber: @TonatiuhdeSanJulian
Pablo Dobarro was assigned by Jacques Lucke 2019-09-27 17:17:23 +02:00

This issue was referenced by 3bbe01dad3

This issue was referenced by 3bbe01dad33c6a57c162c285b4097d689aa389a2
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70299
No description provided.