Fix T70299: Grab brush not working as expected when Ctrl is press

Reviewed By: brecht

Maniphest Tasks: T70299

Differential Revision: https://developer.blender.org/D5920