source/blender/editors/sculpt_paint/sculpt.c
@@ -2089,7 +2089,8 @@ static void update_sculpt_normal(Sculpt *sd, Object *ob, PBVHNode **nodes, int t
   StrokeCache *cache = ob->sculpt->cache;
 
   if (cache->mirror_symmetry_pass == 0 && cache->radial_symmetry_pass == 0 &&
-      (cache->first_time || !(brush->flag & BRUSH_ORIGINAL_NORMAL))) {
+      (cache->first_time || !(brush->flag & BRUSH_ORIGINAL_NORMAL)) &&
+      (cache->first_time || !(brush->sculpt_tool & SCULPT_TOOL_GRAB))) {
     calc_sculpt_normal(sd, ob, nodes, totnode, cache->sculpt_normal);
     if (brush->falloff_shape == PAINT_FALLOFF_SHAPE_TUBE) {
       project_plane_v3_v3v3(cache->sculpt_normal, cache->sculpt_normal, cache->view_normal);
